--- a/assets/stylesheets/grid.scss
+++ b/assets/stylesheets/grid.scss
@@ -1,42 +1,42 @@
 $spacing: 10px;
+#uneditable {
+  .line, .row, .last-unit,
+  .s-row {
+    width: 100%;
+  }
+  .unit{float:left;}
+  .unit-right{float:right;}
+  .size1of1{width:100%;float:none;}
+  .size1of2{width:50%;}
+  .size1of3{width:33.33333%;}
+  .size2of3{width:66.66666%;}
+  .size3of4{width:75%;}
+  .size1of4{width:25%;}
+  .size1of5{width:20%;}
+  .size2of5{width:40%;}
+  .size3of5{width:60%;}
+  .size4of5{width:80%;}
+  .size1of6{width:16.66666%;}
+  .size4of6{width:66.66666%;}
+  .size5of6{width:83.33333%;}
+  .size1of10{width:10%;}
+  .size3of10{width:30%;}
+  .size7of10{width:70%;}
+  .size9of10{width: 90%}
 
-.line, .row, .last-unit,
-.s-row {
-  width: 100%;
+  .last-unit{float:none;width:auto;_position:relative;_left:-3px;_margin-right:-3px;}
+
+  .inner {
+    display: block;
+    padding: $spacing;
+  }
+
+  .spacer {
+    width: $spacing;
+    height: $spacing;
+  }
+
+  .s-hidden {
+    display: none;
+  }
 }
-.unit{float:left;}
-.unit-right{float:right;}
-.size1of1{width:100%;float:none;}
-.size1of2{width:50%;}
-.size1of3{width:33.33333%;}
-.size2of3{width:66.66666%;}
-.size3of4{width:75%;}
-.size1of4{width:25%;}
-.size1of5{width:20%;}
-.size2of5{width:40%;}
-.size3of5{width:60%;}
-.size4of5{width:80%;}
-.size1of6{width:16.66666%;}
-.size4of6{width:66.66666%;}
-.size5of6{width:83.33333%;}
-.size1of10{width:10%;}
-.size3of10{width:30%;}
-.size7of10{width:70%;}
-.size9of10{width: 90%}
-
-.last-unit{float:none;width:auto;_position:relative;_left:-3px;_margin-right:-3px;}
-
-.inner {
-  display: block;
-  padding: $spacing;
-}
-
-.spacer {
-  width: $spacing;
-  height: $spacing;
-}
-
-.s-hidden {
-  display: none;
-}
-
